--- a/Mailer MVVM/View/MainWindow.xaml
+++ b/Mailer MVVM/View/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Mailer"
         xmlns:viewmodel="clr-namespace:Mailer.ViewModels"
-        
+        xmlns:rdlcreport="clr-namespace:Microsoft.Reporting.WinForms;assembly=Microsoft.ReportViewer.WinForms"
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         Title="Рассыльщик" Height="500" Width="800" MaxHeight="500" MaxWidth="800" MinHeight="500" MinWidth="800" Icon="/Images/mailreminder.png"
@@ -23,6 +23,9 @@
         </Grid.RowDefinitions>
         <Menu Grid.Row="0">
             <MenuItem Header="Файл">
+                <!--<MenuItem x:Name="miReport" Header="Отчет" Click="miReport_Click" />-->
+                <MenuItem x:Name="miReport" Header="Отчет" Command="{Binding Report}" />
+
                 <MenuItem Header="Выход">
                     <b:Interaction.Triggers>
                         <b:EventTrigger EventName="Click">
@@ -224,9 +227,13 @@
                 <TabItem.Header>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                         <Image Source="/Images/stat.ico" Width="20" HorizontalAlignment="Left"/>
-                        <TextBlock Margin="3">Статистика</TextBlock>
+                        
+                        <TextBlock Margin="3">Отчет</TextBlock>
                     </StackPanel>
                 </TabItem.Header>
+                <WindowsFormsHost>
+                    <rdlcreport:ReportViewer x:Name="_reportviewer"/>
+                </WindowsFormsHost>
             </TabItem>
 
             <TabItem>
